fix select element style on safari

--- a/assets/global.css
+++ b/assets/global.css
@@ -49,7 +49,7 @@ body {
 }
 
 .button {
-    @apply flex justify-center items-center bg-gradient-to-b from-white active:from-sexfm-400 via-white to-sexfm-400 active:to-white p-0.5 border-sexfm-500 hover:border-sexfm-300 active:border-sexfm-500 rounded-full hover:text-sexfm-300 active:text-sexfm-600 cursor-pointer border xs:border-2;
+    @apply flex justify-center items-center bg-gradient-to-b from-white active:from-sexfm-400 via-white to-sexfm-400 active:to-white p-0.5 border border-sexfm-500 xs:border-2 hover:border-sexfm-300 active:border-sexfm-500 rounded-full hover:text-sexfm-300 active:text-sexfm-600 cursor-pointer;
 }
 
 .pixelated {
@@ -57,7 +57,7 @@ body {
 }
 
 select {
-    @apply border-2 border-sexfm-300 xs:border-[3px];
+    @apply border-2 border-sexfm-300 xs:border-[3px] rounded-none;
 }
 
 ::-webkit-scrollbar {
